XXLJob_HelloWorld/XxlJob-admin/k8s-deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xxl-job-admin
  namespace: atmcmes
  labels:
    app: xxl-job-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xxl-job-admin
  template:
    metadata:
      labels:
        app: xxl-job-admin
    spec:   
      containers:
      - name: xxl-job-admin
        image: harbor.arfa.wise-paas.com/akmcmes/xxl-job-admin:2.2.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "512M"
            cpu: "400m"
            ephemeral-storage: "512M"
        ports:
        - containerPort: 8080
          name: "xxl-job-admin"
      imagePullSecrets:
      - name: docker-registry-harbor
