XXLJob_HelloWorld/XxlJob-admin/k8s-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxl-job-admin
  namespace: atmcmes
spec:
  selector:
    app: xxl-job-admin
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
